--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
-    "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
-    "uuid": "^13.0.0",
-    "xlsx": "^0.18.5"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
