--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "start": "node server.js",
     "postinstall": "prisma generate",
     "migrate:deploy": "prisma migrate deploy",
-    "prisma:seed": "node prisma/seed.js"
+    "prisma:seed": "node prisma/seed.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -26,15 +27,18 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "qrcode": "^1.5.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^13.0.0",
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.11",
-    "prisma": "^6.19.0"
+    "prisma": "^6.19.0",
+    "supertest": "^6.3.3"
   }
 }
